--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,11 @@ dependencies:
   intl: ^0.19.0
   flutter_dotenv: ^5.1.0
   go_router: ^14.0.0
+  
+  # 파일 처리
+  file_picker: ^8.0.0
+  path_provider: ^2.1.0
+  share_plus: ^10.0.0
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +56,7 @@ flutter:
   # 이미지 에셋
   assets:
     - assets/images/
+    - .env
   
   # 폰트 에셋
   fonts:
